--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
 	"pallets/proxy-genesis-companion",
 	"precompiles/utils/macro",
 	"precompiles/randomness",# TODO remove once included in runtimes
+	"pallets/randao",
 	"runtime/moonbase",
 	"runtime/moonbeam",
 	"runtime/moonriver",
