--- a/client/rpc/debug/Cargo.toml
+++ b/client/rpc/debug/Cargo.toml
@@ -32,7 +32,7 @@ sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbea
 # Frontier
 ethereum = { version = "0.11.1", default-features = false, features = [ "with-codec" ] }
 ethereum-types = "0.12.1"
-fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-db = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
-fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-consensus = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-db = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
+fp-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
