--- a/client/rpc/finality/Cargo.toml
+++ b/client/rpc/finality/Cargo.toml
@@ -15,8 +15,8 @@ jsonrpc-derive = "18.0.0"
 parity-scale-codec = "2.2"
 tokio = { version = "1.12.0", features = [ "sync", "time" ] }
 
-fc-db = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-db = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
 sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
 sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
 sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
