--- a/client/rpc/trace/Cargo.toml
+++ b/client/rpc/trace/Cargo.toml
@@ -36,7 +36,7 @@ sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-po
 sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
 
 # Frontier
-fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
-fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-consensus = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
+fc-rpc-core = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fp-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
