--- a/client/rpc/txpool/Cargo.toml
+++ b/client/rpc/txpool/Cargo.toml
@@ -29,4 +29,4 @@ sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-po
 
 # Frontier
 ethereum-types = "0.12.1"
-fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
+fc-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
