--- a/node/perf-test/Cargo.toml
+++ b/node/perf-test/Cargo.toml
@@ -55,10 +55,10 @@ sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonb
 
 # Frontier
 ethereum = { version = "0.11.1" }
-fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-consensus = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fp-evm = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fp-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+pallet-ethereum = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
 
 # Cumulus / Nimbus
 cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.16" }
