--- a/node/service/Cargo.toml
+++ b/node/service/Cargo.toml
@@ -88,14 +88,14 @@ substrate-frame-rpc-system = { git = "https://github.com/purestake/substrate", b
 substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.16" }
 
 # Frontier
-fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-db = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-mapping-sync = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
-fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fp-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
-pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-consensus = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-db = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-mapping-sync = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fc-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16", features = [ "rpc_binary_search_estimate" ] }
+fc-rpc-core = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fp-consensus = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+fp-rpc = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
+pallet-ethereum = { git = "https://github.com/i1314/frontier", branch = "moonbeam-polkadot-v0.9.16" }
 
 # Cumulus / Nimbus
 cumulus-client-cli = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.16" }
